0.10.11 (unreleased)
--------------------

- Always use latest pickle format
- Show alert box about mocked services (if any) in web ui (any view)
- Add services to threads view and rename view to system and threads
- Add function to cancel timers (and other threads that implement cancel)


0.10.10 (2017-07-07)
--------------------

- Fix Python 3 bug (crash) in RpcService
- Add SimplePollingSensor


0.10.9 (2017-06-25)
-------------------

- Fix timezone problem caused by Django webui. Caused issues with CronTimerSensor
- --no_input command line option
- Other small fixes and improvements


0.10.8 (2017-06-24)
-------------------

- Add Division/Div and Inverse/Inv callables


0.10.7 (2017-06-23)
-------------------

- Fix arduino reloading


0.10.6 (2017-06-23)
-------------------

- Fixed regression (SystemObject comparison)


0.10.5 (2017-06-22)
-------------------

- Bugfixes


0.10.4 (2017-06-22)
-------------------

- Change web implementation to conform more to ordinary Django app style
- Add some real-life examples in more_examples/


0.10.3 (2017-06-22)
-------------------

- Added support for RPI.GPIO which is now default.
  If RPIO is desired, set rpio attribute in RpioService.

0.10.0
------

- Python 3 support
- Merged extensions (webui, rpio, arduino, rpc) into main repository