@@ -97,9 +97,6 @@
             </ul>
           </li>
         {% endif %}
-        <li><a href="{% url 'console' %}">Console</a></li>
-        <li><a href="{% url 'threads' %}">Threads</a></li>
-        <li><a href="{% url 'plantuml' %}">UML</a></li>
         <li><a href="{% url 'logout' %}">Log out</a></li>
 
       </ul>
