@@ -4,6 +4,7 @@
 - Always use latest pickle format
 - Show alert box about mocked services (if any) in web ui (any view)
 - Add services to threads view and rename view to system and threads
+- Move threads, uml, and console to "View" submenu.
 - Add function to cancel timers (and other threads that implement cancel)
 
 
